globus-dsi-rest (0.42-1+gt6.@distro@) @distro@; urgency=low

  * update test cred

 -- Globus Toolkit <support@globus.org>  Fri, 22 Nov 2019 08:32:13 +0000

globus-dsi-rest (0.41-1+gt6.@distro@) @distro@; urgency=low

  * Prevent Transfer-Encoding:chunked when Content-Length header is present

 -- Globus Toolkit <support@globus.org>  Tue, 19 Feb 2019 14:36:58 +0000

globus-dsi-rest (0.40-1+gt6.@distro@) @distro@; urgency=low

  * Fix deadlock when write_gridftp_op is unable to register any reads

 -- Globus Toolkit <support@globus.org>  Wed, 10 Oct 2018 18:45:59 +0000

globus-dsi-rest (0.39-1+gt6.@distro@) @distro@; urgency=low

  * Fix race on thread creation
  * Clean up memory usage in tests

 -- Globus Toolkit <support@globus.org>  Fri, 05 Oct 2018 09:46:41 -0400

globus-dsi-rest (0.38-1+gt6.@distro@) @distro@; urgency=low

  * Improve testing error for restartability.
  * Improve logging
  * When HTTP GET returns an error, don't send it on a data channel

 -- Globus Toolkit <support@globus.org>  Tue, 28 Nov 2017 14:10:23 +0000

globus-dsi-rest (0.37-1+gt6.@distro@) @distro@; urgency=low

  * Fix crash when pending buffers are registered and an error occurs

 -- Globus Toolkit <support@globus.org>  Wed, 08 Nov 2017 18:13:01 +0000

globus-dsi-rest (0.36-1+gt6.@distro@) @distro@; urgency=low

  * Fix leaks
  * Handle error registering GridFTP reads

 -- Globus Toolkit <support@globus.org>  Fri, 22 Sep 2017 14:40:23 -0400

globus-dsi-rest (0.35-1+gt6.@distro@) @distro@; urgency=low

  * Fix upload byte counting

 -- Globus Toolkit <support@globus.org>  Thu, 31 Aug 2017 08:51:58 -0400

globus-dsi-rest (0.34-1+gt6.@distro@) @distro@; urgency=low

  * Fix crash when reusing multipart args between requests

 -- Globus Toolkit <support@globus.org>  Wed, 16 Aug 2017 10:37:21 -0400

globus-dsi-rest (0.33-1+gt6.@distro@) @distro@; urgency=low

  * Fix leak when using gridftp_ops

 -- Globus Toolkit <support@globus.org>  Fri, 14 Jul 2017 16:33:43 -0400
